
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toggle_cbreak"
version = "0.0.2"
authors = [
    { name="Liu Zuo Lin", email="zlliu246@gmail.com" },
]
description = "toggles cbreak mode on terminal"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/zlliu246/toggle_cbreak"
Issues = "https://github.com/zlliu246/toggle_cbreak/issues"
